# cs153-questforge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  main.py
backend/app/routers/: health.py
backend/tests/: test_health.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: client.ts
frontend/src/pages/: Home.tsx
frontend/src/styles/: global.css
